# tensorflow-object-detection-scripts

preprocessing/: class_stats.py  classes_in_annotations.py  create_tfrecord.py  merge_classes_in_one.py  partition_dataset.py  switch_numeric_class_to_text.py  tfrecord_inspect.py  update_class.py
preprocessing/utils/: genetic_balanced.py
svo_recording/: Makefile  extract_frames.py  preprocessing.ipynb  svo_record.py
svo_recording/cpp/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  main.cpp
tensorflow/: confusion_matrix.py  convert_model_to_tensorrt.py  create_onnx_engine.py  inference.py  inference_svo.py  save_model.py
tensorflow/onnx/: onnx_engine.py  onnx_inference.py
tensorflow/utils/: inference_utils.py  model_utils.py  tensorrt_utils.py
training/: model_main_tf2.py
